force-app/main/default/objects/Apttus__Term_Exception__c/Apttus__Term_Exception__c.object-meta.xml
<CustomObject>
    <description>Term Exceptions master table</description>
    <label>Term Exception</label>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>