force-app/main/default/objects/Apttus__Term_Exception__c/fields/Apttus__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this exception currently active?</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>