force-app/main/default/objects/Apttus__Term_Exception__c/fields/Apttus__Agreement_Types__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Agreement_Types__c</fullName>
    <description>Applicable lIst of agreement types</description>
    <label>Agreement Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>