force-app/main/default/objects/Apttus__Term_Exception__c/fields/Apttus__Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Approval_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Approval(s) required for this exception?  Will trigger approval processing.</description>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>