force-app/main/default/objects/Apttus__Term_Exception__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <description>Details and guidelines as to when this term exception should be used.</description>
    <label>Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>