force-app/main/default/objects/Apttus__Term_Exception__c/fields/Apttus__Exception__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Exception__c</fullName>
    <description>Description</description>
    <label>Exception</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>