force-app/main/default/objects/Apttus__Term_Exception__c/fields/Apttus__Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Exception_Type__c</fullName>
    <description>Logical grouping of term exceptions.</description>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>