force-app/main/default/objects/Apttus__Term_Exception__c/listViews/Apttus__All.listView-meta.xml
<ListView>
    <fullName>Apttus__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus__Active__c</columns>
    <columns>Apttus__Approval_Required__c</columns>
    <columns>Apttus__Exception_Type__c</columns>
    <columns>Apttus__Exception__c</columns>
    <columns>Apttus__Agreement_Types__c</columns>
    <columns>Apttus__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>